# cookiecutter-django

./: README.md
{{cookiecutter.directory_name}}/: pyproject.toml
{{cookiecutter.directory_name}}/config/settings/: base.py  production.py
{{cookiecutter.directory_name}}/requirements/: base.txt  develop.txt  production.txt
{{cookiecutter.directory_name}}/{{cookiecutter.directory_name}}/templates/: base.html
