[tool.poetry]
name = "{{cookiecutter.directory_name}}"
version = "0.1.0"
description = "{{cookiecutter.short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1"
Pillow = "^11.0"
psycopg2-binary = "^3.2"
gunicorn = "^23.0"

[tool.poetry.dev-dependencies]
{%- if cookiecutter.coverage == 'yes' %}
coverage = "^7.4"
{% endif %}
{%- if cookiecutter.black == 'yes' -%}
black = "^24.10"
{%- endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
